--- a/autorizar.html
+++ b/autorizar.html
@@ -69,15 +69,16 @@
     <div class="container">
         <img src="WhatsApp Image 2025-03-22 at 22.18.22.jpeg" alt="Autorização para menores de 18 anos">
         <div class="form-overlay">
-            <form id="formAutorizacao">
-                <input type="text" class="input-field" style="top: 219px; left: 100px; width: 543px; border: initial;" placeholder=" ">
-                <input type="text" class="input-field" style="top: 253px; left: 17%; width: 300px; height: 15px; border: initial;" placeholder=" ">
-                <input type="text" class="input-field" style="top: 281px; left: 8%; width: 580px; height: 15px; border: initial;" placeholder=" ">
-                <input type="text" class="input-field" style="top: 310px; left: 18%; width: 235px; height: 15px; border: initial;" placeholder=" ">
-                <input type="text" class="input-field" style="top: 424px; left: 23%; width: 310px; border: initial" placeholder=" ">
-                <input type="text" class="input-field" style="top: 513px; left: 30%; width: 340px; border: initial;" placeholder=" ">
-                <button type="submit" id="enviarBtn">Enviar</button>
-            </form>
+            <input type="text" class="input-field" name="campo1" style="top: 219px; left: 100px; width: 543px; border: initial;" placeholder="Campo 1">
+            <input type="text" class="input-field" name="campo2" style="top: 253px; left: 17%; width: 300px; height: 15px; border: initial;" placeholder="Campo 2">
+            <input type="text" class="input-field" name="campo3" style="top: 281px; left: 8%; width: 580px; height: 15px; border: initial;" placeholder="Campo 3">
+            <input type="text" class="input-field" name="campo4" style="top: 310px; left: 18%; width: 235px; height: 15px; border: initial;" placeholder="Campo 4">
+            <input type="text" class="input-field" name="campo5" style="top: 424px; left: 23%; width: 310px; border: initial" placeholder="Campo 5">
+            <input type="text" class="input-field" name="campo6" style="top: 513px; left: 30%; width: 340px; border: initial;" placeholder="Campo 6">
+            
+            <button type="submit" id="enviarBtn">Enviar</button>
+        </form>
+
         </div>
     </div>
 
