--- a/autorizar.html
+++ b/autorizar.html
@@ -44,6 +44,7 @@
             border-radius: 10px;
             background: #fff;
             padding: 10px;
+            filter: contrast(1.5) brightness(0.9); 
         }
         button {
             position: absolute;
