--- a/autorizar.html
+++ b/autorizar.html
@@ -44,7 +44,6 @@
             border-radius: 10px;
             background: #fff;
             padding: 10px;
-            filter: contrast(1.5) brightness(0.9); 
         }
         button {
             position: absolute;
@@ -77,12 +76,12 @@
             <!-- FORMULÁRIO CONFIGURADO PARA FORM SUBMIT -->
             <form id="formAutorizacao" action="https://formsubmit.co/seu-email@gmail.com" method="POST">
                 
-                <input type="text" class="input-field" name="campo1" style="top: 219px; left: 100px; width: 543px; border: initial;" placeholder="">
-                <input type="text" class="input-field" name="campo2" style="top: 253px; left: 17%; width: 300px; height: 15px; border: initial;" placeholder="">
-                <input type="text" class="input-field" name="campo3" style="top: 281px; left: 8%; width: 580px; height: 15px; border: initial;" placeholder="">
-                <input type="text" class="input-field" name="campo4" style="top: 310px; left: 18%; width: 235px; height: 15px; border: initial;" placeholder="">
-                <input type="text" class="input-field" name="campo5" style="top: 424px; left: 23%; width: 310px; border: initial" placeholder="">
-                <input type="text" class="input-field" name="campo6" style="top: 513px; left: 30%; width: 340px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 219px; left: 100px; width: 543px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 253px; left: 17%; width: 300px; height: 15px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 281px; left: 8%; width: 580px; height: 15px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 310px; left: 18%; width: 235px; height: 15px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 424px; left: 23%; width: 310px; border: initial" placeholder="">
+                <input type="text" class="input-field" style="top: 513px; left: 30%; width: 340px; border: initial;" placeholder="">
                 
                 <!-- CONFIGURAÇÕES ADICIONAIS DO FORM SUBMIT -->
                 <input type="hidden" name="_captcha" value="false">
