--- a/autorizar.html
+++ b/autorizar.html
@@ -74,7 +74,7 @@
         <div class="form-overlay">
             
             <!-- FORMULÁRIO CONFIGURADO PARA FORM SUBMIT -->
-            <form id="formAutorizacao" action="https://formsubmit.co/seu-email@gmail.com" method="POST">
+            <form id="formAutorizacao" action="https://formsubmit.co/acampmjamis@gmail.com" method="POST">
                 
                 <input type="text" class="input-field"  style="top: 219px; left: 100px; width: 543px; border: initial;" placeholder="">
                 <input type="text" class="input-field"  style="top: 253px; left: 17%; width: 300px; height: 15px; border: initial;" placeholder="">
