--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
             justify-content: center;
             pointer-events: none;
         }
-
+        .input-field {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.7);
+            border: 1px solid #000;
+            padding: 5px;
+            font-size: 16px;
+            pointer-events: auto;
         }
         img {
             width: 100%;
@@ -65,15 +71,13 @@
         <img src="WhatsApp Image 2025-03-22 at 22.18.22.jpeg" alt="Autorização para menores de 18 anos">
         <div class="form-overlay">
             <form id="formAutorizacao" action="https://formsubmit.co/acampmjamis@gmail.com" method="POST" enctype="multipart/form-data">
-     <input type="text" class="input-field" style="top: 256px; left: 18%; width: 300px;  border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 220px; left: 100px; width: 540px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 250px; left: 18%; width: 300px;  border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 279px; left: 10%; width: 580px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 309px; left: 18%; width: 235px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 425px; left: 24%; width: 310px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 514px; left: 35%; width: 340px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 219px; left: 100px; width: 543px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 253px; left: 17%; width: 300px; height: 15px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 281px; left: 8%; width: 580px; height: 15px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 310px; left: 18%; width: 235px; height: 15px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 424px; left: 23%; width: 310px; border: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 513px; left: 30%; width: 340px; border: initial;" placeholder="">
                 
-              
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_next" value="sucesso.html">
                 <input type="hidden" name="_subject" value="autorizacao preenchida">
