--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
     <div class="container" id="capture-area">
         <img src="WhatsApp Image 2025-03-22 at 22.18.22.jpeg" alt="Autorização para menores de 18 anos">
         <div class="form-overlay">
-            <form id="formAutorizacao" action="https://formsubmit.co/acampmjamis@gmail.com" method="POST" enctype="multipart/form-data">
-                <input type="text" class="input-field" style="top: 219px; left: 100px; width: 543px; border: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 253px; left: 17%; width: 300px; height: 15px; border: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 281px; left: 8%; width: 580px; height: 15px; border: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 310px; left: 18%; width: 235px; height: 15px; border: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 424px; left: 23%; width: 310px; border: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 513px; left: 30%; width: 340px; border: initial;" placeholder="">
+             <form id="formAutorizacao" action="https://formsubmit.co/acampmjamis@gmail.com" method="POST">
+                <input type="text" class="input-field" style="top: 226px; left: 100px; width: 540px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 256px; left: 18%; width: 300px;  border-left: initial; border-right: initial; border-top: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 285px; left: 10%; width: 580px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 315px; left: 18%; width: 235px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 431px; left: 24%; width: 310px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
+                <input type="text" class="input-field" style="top: 520px; left: 35%; width: 340px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
                 
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_next" value="sucesso.html">
                 <input type="hidden" name="_subject" value="autorizacao preenchida">
                 <input type="hidden" name="screenshot" id="screenshotData">
-                
+
                 <button type="submit" id="enviarBtn">Enviar</button>
             </form>
         </div>
