--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             border: none;
             cursor: pointer;
             font-size: 16px;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
             border-radius: 5px;
             pointer-events: auto;
         }
