--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             padding: 5px;
             font-size: 16px;
             pointer-events: auto;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
         }
         img {
             width: 100%;
