--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             background-color: rgb(80, 170, 80);
         }
     </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
     <div class="container">
