--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="capture-area">
         <img src="WhatsApp Image 2025-03-22 at 22.18.22.jpeg" alt="Autorização para menores de 18 anos">
         <div class="form-overlay">
             <form id="formAutorizacao" action="https://formsubmit.co/acampmjamis@gmail.com" method="POST">
-                <input type="text" class="input-field" style="top: 226px; left: 100px; width: 540px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 256px; left: 18%; width: 300px;  border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 285px; left: 10%; width: 580px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 315px; left: 18%; width: 235px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 431px; left: 24%; width: 310px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
-                <input type="text" class="input-field" style="top: 520px; left: 35%; width: 340px; border-left: initial; border-right: initial; border-top: initial;" placeholder="">
+                <input type="text" name="responsavel" class="input-field" style="top: 226px; left: 100px; width: 540px;" placeholder="">
+                <input type="text" name="cpf" class="input-field" style="top: 256px; left: 18%; width: 300px;" placeholder="">
+                <input type="text" name="menor" class="input-field" style="top: 285px; left: 10%; width: 580px;" placeholder="">
+                <input type="text" name="rg" class="input-field" style="top: 315px; left: 18%; width: 235px;" placeholder="">
+                <input type="text" name="telefone" class="input-field" style="top: 431px; left: 24%; width: 310px;" placeholder="">
+                <input type="text" name="assinatura" class="input-field" style="top: 520px; left: 35%; width: 340px;" placeholder="">
                 
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_next" value="sucesso.html">
@@ -100,7 +100,7 @@
                 let imageData = canvas.toDataURL("image/png");
                 document.getElementById("screenshotData").value = imageData;
                 form.submit();
-            });
+            }).catch(error => console.error("Erro ao capturar imagem:", error));
         });
     </script>
 </body>
