--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 let imageData = canvas.toDataURL("image/png");
                 document.getElementById("screenshotData").value = imageData;
                 form.submit();
+                window.location.href = "sucesso.html";
             }).catch(error => console.error("Erro ao capturar imagem:", error));
         });
     </script>
