--- a/index.html
+++ b/index.html
@@ -90,16 +90,40 @@
         </div>
     </div>
     <script>
-        document.getElementById("formAutorizacao").addEventListener("submit", function(event) {
-            event.preventDefault();
-            let form = this;
-            html2canvas(document.getElementById("capture-area")).then(canvas => {
-                let imageData = canvas.toDataURL("image/png");
-                document.getElementById("screenshotData").value = imageData;
-                form.submit();
-                window.location.href = "sucesso.html";
-            }).catch(error => console.error("Erro ao capturar imagem:", error));
-        });
-    </script>
+    document.getElementById("formAutorizacao").addEventListener("submit", function(event) {
+        event.preventDefault();
+        let form = this;
+
+        html2canvas(document.getElementById("capture-area")).then(canvas => {
+            let imageData = canvas.toDataURL("image/png").split(',')[1]; // Remove o prefixo "data:image/png;base64,"
+
+            let formData = new FormData();
+            formData.append("image", imageData);
+            formData.append("key", "208d56c23b2b4bb12eab621347edf4ce");
+
+            fetch("https://api.imgbb.com/1/upload", {
+                method: "POST",
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    let imageUrl = data.data.url;
+                    document.getElementById("screenshotData").value = imageUrl;
+                    form.submit();
+                    window.location.href = "sucesso.html";
+                } else {
+                    alert("Erro ao enviar a imagem. Tente novamente.");
+                }
+            })
+            .catch(error => {
+                console.error("Erro no upload da imagem:", error);
+                alert("Falha ao capturar e enviar a imagem.");
+            });
+
+        }).catch(error => console.error("Erro ao capturar imagem:", error));
+    });
+</script>
+
 </body>
 </html>
