--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             let formData = new FormData();
             formData.append("image", imageData);
-            formData.append("key", "208d56c23b2b4bb12eab621347edf4ce");
+            formData.append("key", "https://api.imgbb.com/1/upload");
 
             fetch("https://api.imgbb.com/1/upload", {
                 method: "POST",
