--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             let formData = new FormData();
             formData.append("image", imageData);
-            formData.append("key", "https://api.imgbb.com/1/upload");
+            formData.append("key", "6ab2cdc34979e942f6b428e0d78c6eb3");
 
             fetch("https://api.imgbb.com/1/upload", {
                 method: "POST",
