--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             padding: 5px;
             font-size: 16px;
             pointer-events: auto;
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
         img {
             width: 100%;
